# extension-surveyor

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  extension.rs  extensions.rs  github.rs  main.rs  survey.rs  surveys.rs
src/surveys/: extension_json_usage.rs  theme_property_usage.rs  tree_sitter_grammars.rs
