[package]
name = "extension-surveyor"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.30", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serde_json_lenient = "0.2.4"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
